codex-rs/tui/src/chatwidget/tokens/snapshots/codex_tui__chatwidget__tokens__scope__tests__cost_mixed_provider_day_narrow.snap
---
source: tui/src/chatwidget/tokens/scope_tests.rs
expression: "render_bottom_popup_with_height(&narrow, 40, 60)"
---
  Cost — this conversation
  Requested UTC day: 2026-09-16

› This conversation on 2026-09-
  16 (UTC):
  • local-mock · mock-model —
  Pay per use. 1 request, 55
  tokens. Estimated cost: no price
  available.
  • OpenAI · gpt-5.4 — Pay per use.
  1 request, 110 tokens. Estimated

  Other dates: /cost [YYYY-MM-DD]  or
  START END hour|day|week|month  (UTC)
  ↑↓ scroll · Enter open · Esc back/clos
